# stm32f407_edu

./: .gitignore  CMakeLists.txt  CMakeLists_custom.txt  README.md  backup_CMakeLists.txt  compile_commands.json
cmake/: gcc-arm-none-eabi.cmake
cmake/custom_system/: CMakeLists.txt
src/: main.cpp
